# bin-util

./: .clang-format  CMakeLists.txt  README.org
include/: common_util.h
include/bin_util/: bin_util.h  common_util.h  content.h  convert.h  endian.h  file_reader.h  i_file_reader.h  print.h  read.h  section.h  type.h
include/reader_util/: common_util.h  endian.h  file_reader.h  i_file_reader.h
src/: CMakeLists.txt  common_util.cc  content.cc  convert.cc  file_reader.cc  print.cc  read.cc  section.cc  type.cc
test/: CMakeLists.txt  read_util_test.cc  reader_util.cc  test_read_util.cc
